# vault

./: .gitignore  CMakeLists.txt
include/: crypto_utils.h  file_utils.h  password_manager.h  secret_string.h  secure_memory.h
src/: crypto_utils.cpp  file_utils.cpp  main.cpp  main_cli.cpp  password_manager.cpp
